# rag_text-2-sql

./: .env.example  .gitignore  README.md  REFERENCE.md  SEARCH.md  main.py  params.yaml  pyproject.toml  requirements.txt  templates.py  test_main.py
docs/: REFERENCE.md
docs/debug_prompts/: LOCAL_DB_RR.md  SEARCH.md  pipe_start_01.md
logs/: logs_1.csv
notebooks/: 01_t2SQL_local_db.ipynb  01_text-2-SQL.ipynb  01_text-2-SQL.ipynb.ipynb  02_t2SQL_TR-RR.ipynb  03_t2SQL_DB-connect.ipynb  04_t2SQL_DB-connect.ipynb  Advanced_Query_Pipelines_over_Tabular_Data.ipynb  lets_try_connecting_remote_db.ipynb  ref..ipynb
notebooks/trials_v1/: 01_text-2-SQL.ipynb
outputs/: text2sql_workflow.html
outputs/Chinook/workflow_visualization/: LK_text2sql_workflow_flow.html
outputs/trials_v1/: text2sql_dag.html
rag_pipeline/: stage_01_data_prep.py  stage_02_populate_vector_db.py  stage_03_query_workflow.py  stage_03_retrievals.py  stage_04_query_workflow.py
ref_prompts_mds/: TEST_PROMPT.md
tests/: test_stage_01.py
tests/trials_v1/: test_workflow_arch.py
utils/: logger.py  server.py
utils/helpers/: common.py  llama_index_imports.py  other_imports.py  population_helpers.py  retriever_helpers.py  sql_alchemy_imports.py  summary_helpers.py  workflow_helpers.py
utils/llm/: get_llm_func.py  get_prompt_temp.py
utils/populate/: custom_index_load.py
utils/stage_01/: schema_helpers.py
utils/t2SQL_workflow/: custom_events.py  custom_fallbacks.py  helpers.py
utils/workflow/: custom_events.py  custom_fallbacks.py  visualize.py
(+1 files in other folders)
